# IntervAI

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4fb7b9108806_initial_schema_with_new_enums.py  9a3f9a7e2d1b_add_langgraph_checkpoint_tables.py  c6faf8b7ab43_initial_schema_with_new_enums.py  e2554d4a1986_initial_schema.py
backend/app/: config.py  database.py
backend/app/ai/: __init__.py  graph.py  nodes.py  state.py
backend/app/controller/: file_controller.py
backend/app/core/: analysis_logging.py  config.py  loader.py  security.py
backend/app/db/: __init__.py  interview_analysis_crud.py  interview_crud.py  refresh_token_crud.py  resume_curd.py  user_crud.py
backend/app/enums/: __init__.py  file_response.py  interview_status.py
backend/app/models/: __init__.py  document_embedding.py  interview.py  interview_analysis.py  interview_answer.py  interview_question.py  refresh_token.py  resume.py  user.py
backend/app/routes/: auth.py  dependencies.py  interview.py  resume.py
backend/app/schemas/: __init__.py  interview.py  interview_answer.py  interview_question.py  resume.py  tokens.py  user.py
backend/app/services/: ai_service.py  auth.py  auth_service.py  interview.py  resume.py  user.py  user_service.py
docker/: .env.example  docker-compose.yml
