[project]
name = "IntervAI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pypdf>=6.10.0",
    "sqlalchemy>=2.0.49",
]
