[project]
name = "IntervAI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "docx2txt>=0.9",
    "fastapi[standard]>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph>=1.1.6",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=5.4.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.0.0",
]
